--- a/verify.html
+++ b/verify.html
@@ -9,37 +9,33 @@
   <h1>Trwa weryfikacja konta...</h1>
   <div id="status"></div>
 
-  <script>
+  <script type="module">
     const SUPABASE_URL = "https://jjmnacolebxsifmnmqks.supabase.co";
-    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpqbW5hY29sZWJ4c2lmbW5tcWtzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU3OTcyNDQsImV4cCI6MjA3MTM3MzI0NH0.1hNoBQ4wDuA_t_vscorQ6FRb-aW8IxHEDxuZKEhndv0";
-    const db = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpqbW5hY29sZWJ4c2lmbW5tcWtzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU3OTcyNDQsImV4cCI6MjA3MTM3MzI0NH0.1hNoBQ4wDuA_t_vscorQ6FRb-aW8IxHEDxuZKEhndv0"; // anon key
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     async function verifyAccount() {
-      const params = new URLSearchParams(window.location.search);
-      const token = params.get("token");
+      const hashParams = new URLSearchParams(window.location.hash.substring(1));
+      const access_token = hashParams.get("access_token");
+      const refresh_token = hashParams.get("refresh_token");
       const status = document.getElementById("status");
 
-      if (!token) {
-        status.innerText = "❌ Brak tokenu w linku";
+      if (!access_token || !refresh_token) {
+        status.innerText = "❌ Brak tokenów w linku!";
         return;
       }
 
-      const { data, error } = await db.from("profiles")
-        .select("*")
-        .eq("verify_token", token)
-        .single();
+      const { data, error } = await supabase.auth.setSession({
+        access_token,
+        refresh_token
+      });
 
-      if (error || !data) {
-        status.innerText = "❌ Nieprawidłowy lub wygasły link";
+      if (error) {
+        status.innerText = "❌ Błąd: " + error.message;
         return;
       }
 
-      // Oznacz konto jako zweryfikowane
-      await db.from("profiles")
-        .update({ verified: true, verify_token: null })
-        .eq("id", data.id);
-
-      status.innerText = "✔️ Konto zostało zweryfikowane! Możesz się teraz zalogować.";
+      status.innerText = "✔️ Konto zostało zweryfikowane! Przekierowanie...";
       setTimeout(() => window.location.href = "index.html", 2000);
     }
 
