--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <main class="container" id="app"></main>
 
-<footer>© <script>document.write(new Date().getFullYear())</script> StreamingHub • Supabase</footer>
+<footer>© <script>document.write(new Date().getFullYear())</script> StreamingHub • free video</footer>
 
 <!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
