--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>StreamingHub • Supabase</title>
+  <title>StreamingHub • Free movie</title>
   <style>
     :root{--bg:#0b0d10;--card:#151922;--text:#e3e7ee;--muted:#a1a9b8;--brand:#4f7cff;--border:#232a37}
     *{box-sizing:border-box} body{margin:0;background:var(--bg);color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto}
