--- a/filmy.html
+++ b/filmy.html
@@ -22,7 +22,7 @@
     .card.p{padding:12px}
     .card img{width:100%;height:200px;object-fit:cover;display:block}
     .small{font-size:12px;color:var(--muted)}
-    .alert{background:#152031;padding:10px;border-radius:10px;color:#b7c4e6;margin:8px 0}
+    .alert{background:#152031;padding:10px;border-radius:10px;color:#0e1218;margin:8px 0}
     .flex{display:flex;gap:12px;align-items:center}
     .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
     .mt-2{margin-top:8px}.mt-4{margin-top:16px}.mt-8{margin-top:32px}
