--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     .badge{font-size:12px;color:#fff;background:#2a3446;padding:2px 8px;border-radius:999px}
     .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(200px,1fr));gap:12px}
     .card{background:var(--card);border:1px solid var(--border);border-radius:14px;overflow:hidden}
-    .card.p{padding:12px}
+    .card.p{padding:12px;height:94px}
     .card img{width:100%;height:200px;object-fit:cover;display:block}
     .small{font-size:12px;color:var(--muted)}
     .alert{background:#152031;padding:10px;border-radius:10px;color:#b7c4e6;margin:8px 0}
@@ -746,3 +746,4 @@ UI.show("home");
 </script>
 </body>
 </html>
+
