--- a/index.html
+++ b/index.html
@@ -101,24 +101,9 @@
   }
 
   // ⚠️ REPLACE THESE WITH YOUR ACTUAL SUPABASE CREDENTIALS ⚠️
-  // Get them from: https://supabase.com/dashboard → Your Project → Settings → API
-  const SUPABASE_URL = "https://jjmnacolebxsifmnmqks.supabase.co";  // Example: https://abcdefg.supabase.co
-  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpqbW5hY29sZWJ4c2lmbW5tcWtzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU3OTcyNDQsImV4cCI6MjA3MTM3MzI0NH0.1hNoBQ4wDuA_t_vscorQ6FRb-aW8IxHEDxuZKEhndv0";     // Long string starting with eyJ...
+  const SUPABASE_URL = "https://jjmnacolebxsifmnmqks.supabase.co";
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImpqbW5hY29sZWJ4c2lmbW5tcWtzIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTU3OTcyNDQsImV4cCI6MjA3MTM3MzI0NH0.1hNoBQ4wDuA_t_vscorQ6FRb-aW8IxHEDxuZKEhndv0";
   
-  if (SUPABASE_URL.includes('WKLEJ_TUTAJ') || SUPABASE_KEY.includes('WKLEJ_TUTAJ')) {
-    console.error('[v0] Supabase credentials not configured!');
-    document.getElementById('app').innerHTML = `
-      <div class="alert">
-        ❌ <strong>Błąd konfiguracji</strong><br>
-        Musisz podmienić dane Supabase w liniach 130-131:<br>
-        1. Idź do <a href="https://supabase.com/dashboard" target="_blank">supabase.com/dashboard</a><br>
-        2. Wybierz projekt → Settings → API<br>
-        3. Skopiuj Project URL i anon key<br>
-        4. Wklej je w kodzie HTML
-      </div>`;
-    return;
-  }
-
   console.log('[v0] Creating Supabase client...');
   const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
   
