--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>StreamingHub • Free movie</title>
+  <title>StreamingHubbb • Free movie</title>
   <!-- Obfuscated CSS - minified and encoded -->
   <style id="main-styles"></style>
 </head>
@@ -130,8 +130,8 @@
   const SUPABASE_KEY = "twoj_anon_key_tutaj";
 
   if (!window.supabase) {
-    console.error('[v0] Supabase not loaded!');
-    document.getElementById('app').innerHTML = '<div class="alert">❌ Błąd ładowania Supabase</div>';
+    console.error('[v0] not loaded!');
+    document.getElementById('app').innerHTML = '<div class="alert">❌ Błąd ładowania</div>';
     return;
   }
 
